--- a/windows/login/login.html
+++ b/windows/login/login.html
@@ -34,5 +34,6 @@
         </div>
     </div>
     <script src="../../js/window-control.js"></script>
+    <script src="js/login.js"></script>
 </body>
 </html>
