--- a/windows/lobby/lobby.html
+++ b/windows/lobby/lobby.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
@@ -25,6 +25,8 @@
         </div>
     </div>
     <script src="../../js/window-control.js"></script>
+    <script src="../../js/CanvasController.js"></script>
     <script src="js/canvas.js"></script>
+    <script src="js/main.js"></script>
 </body>
 </html>
