--- a/windows/lobby/lobby.html
+++ b/windows/lobby/lobby.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
@@ -26,5 +26,6 @@
     </div>
     <script src="../../js/window-control.js"></script>
     <script src="js/canvas.js"></script>
+    <script src="js/lobby.js"></script>
 </body>
 </html>
