--- a/windows/lobby/lobby.html
+++ b/windows/lobby/lobby.html
@@ -69,7 +69,7 @@
             <section class="chatArea">
                 <h3>Activity</h3>
                 <div class="chat">
-                    
+
                 </div>
             </section>
             <footer>
@@ -77,11 +77,17 @@
             </footer>
         </div>
     </div>
+
+    <div class="conversation" id="call" hidden><embed type="text/html" src="../../widgets/conversation/conversation.html"></embed></div>
+
     <script src="../../js/window-control.js"></script>
     <script src="../../js/CanvasController.js"></script>
+
     <script src="js/canvas.js"></script>
     <script src="js/lobby.js"></script>
     <script src="js/ui.js"></script>
     <script src="js/chatbot.js"></script>
+    <script src="../../js/rtc.js"></script>
+    <script src="../../js/participants.js"></script>
 </body>
 </html>
