--- a/windows/room/room.html
+++ b/windows/room/room.html
@@ -28,6 +28,8 @@
     <script src="../../js/window-control.js"></script>
     <script src="../../js/CanvasController.js"></script>
     <script src='js/canvas.js'></script>
+    <script src='js/users.js'></script>
+    <script src='js/groups.js'></script>
     <script src='js/main.js'></script>
 </body>
 </html>
