--- a/windows/roomMap/roomMap.html
+++ b/windows/roomMap/roomMap.html
@@ -31,7 +31,12 @@
         </div>
         <div class="map">
             <h1>Map</h1>
-            <img src="./assets/map.svg" />
+            <canvas id="map" width="2000" height="2000"></canvas>
+            <img src="./assets/map.svg" hidden />
+            <img src="./assets/Jaffet lower.svg" hidden />
+            <img src="./assets/Jaffet Upper.svg" hidden />
+            <img src="./assets/MainGate.svg" hidden />
+            <img src="./assets/BDH.svg" hidden />
         </div>
         <div class="list" hidden>
             <h1>Room lists</h1>
@@ -41,6 +46,7 @@
     <script src="../../js/window-control.js"></script>
     <script src="../../js/CanvasController.js"></script>
     <script src="js/room-list.js"></script>
+    <script src="js/map.js"></script>
     <script src="js/main.js"></script>
 
     <!--<script src="js/canvas.js"></script>
