Added search bar functionality using Fuse.js

--- a/windows/lobby/lobby.html
+++ b/windows/lobby/lobby.html
@@ -21,8 +21,8 @@
         <header>
             <h1 id="header-greeting"></h1>
             <div class="search">
-                <img src="../../assets/img/search.png" height="15px" width="15px" />
-                <input type="search" name="rooms" placeholder="Find Rooms..." />
+                <img src="../../assets/img/search.png" id="search-btn" height="15px" width="15px" />
+                <input type="search" id="search-query" name="rooms" placeholder="Find Rooms..." />
             </div>
         </header>
         <div class="lobby">
@@ -87,6 +87,7 @@
     <script src="js/lobby.js"></script>
     <script src="js/ui.js"></script>
     <script src="js/chatbot.js"></script>
+    <script src="js/search.js"></script>
     <script src="../../js/rtc.js"></script>
     <script src="../../js/participants.js"></script>
 </body>
