--- a/windows/roomMap/roomMap.html
+++ b/windows/roomMap/roomMap.html
@@ -19,7 +19,7 @@
     </div>
     <div class="view">
         <div class="recommended">
-            <h1>Recommended rooms</h1>
+            <h1 id="cards-label">Recommended rooms</h1>
             <div class="cards">
                 <!--<div class="room">
                     <div>
