Added full dropdown search feature, minus beautification.

--- a/windows/lobby/lobby.html
+++ b/windows/lobby/lobby.html
@@ -23,6 +23,7 @@
             <div class="search">
                 <img src="../../assets/img/search.png" id="search-btn" height="15px" width="15px" />
                 <input type="search" id="search-query" name="rooms" placeholder="Find Rooms..." />
+                <div class="search-dropdown" id="search-dropdown"></div>
             </div>
         </header>
         <div class="lobby">
