updated users, added room layouts, dev login

--- a/windows/room/room.html
+++ b/windows/room/room.html
@@ -43,7 +43,9 @@
 
             </div>
 
-            <div class="participants"></div>
+            <div class="participants">
+                <img src="../../assets/img/steve.png" hidden />
+            </div>
         </div>
         <div class="control">
             <button class="leave"><img src="../../widgets/conversation/assets/img/skip_previous.png" width="40px" /></button>
