--- a/windows/roomMap/roomMap.html
+++ b/windows/roomMap/roomMap.html
@@ -32,7 +32,7 @@
         <div class="map">
             <h1>Map</h1>
             <canvas id="map" width="2000" height="2000"></canvas>
-            <img src="./assets/map.svg" hidden />
+            <img id="map-img" src="./assets/map.jpg" hidden />
             <img src="./assets/Jaffet lower.svg" hidden />
             <img src="./assets/Jaffet Upper.svg" hidden />
             <img src="./assets/MainGate.svg" hidden />
