--- a/windows/room/room.html
+++ b/windows/room/room.html
@@ -54,8 +54,14 @@
         </div>
 
     </div>
+
+    <div class='notification-collection'>
+        
+    </div>
+
     <script src="../../js/window-control.js"></script>
     <script src="../../js/CanvasController.js"></script>
+    <script src='js/notifications.js'></script>
     <script src='js/canvas.js'></script>
     <script src='js/users.js'></script>
     <script src='js/groups.js'></script>
