--- a/windows/room/room.html
+++ b/windows/room/room.html
@@ -37,9 +37,9 @@
                 <div class="window" id="local">
                     <video autoplay playsinline width="70%" height="50%"  muted />
                 </div>
-                <div class="window" id="remote">
+                <!-- <div class="window" id="remote">
                     <video autoplay playsinline width="70%" height="50%"  />
-                </div>
+                </div> -->
 
             </div>
 
