Added full zoom functionality

--- a/windows/roomMap/roomMap.html
+++ b/windows/roomMap/roomMap.html
@@ -32,13 +32,19 @@
             </div>
         </div>
         <div class="map">
-            <h1>Map</h1>
-            <div id="map" ></div>
-            <img id="map-img" src="./assets/map.jpg" hidden />
-            <img src="./assets/Jaffet lower.svg" hidden />
-            <img src="./assets/Jaffet Upper.svg" hidden />
-            <img src="./assets/MainGate.svg" hidden />
-            <img src="./assets/BDH.svg" hidden />
+            <div id="map-overlay">
+                <div id="map-name">
+                    <img src="./assets/map_icon.svg" align="left" />
+                    <h1>Campus Map</h1>
+                </div>
+                <div id="zoom">
+                    <img id="zoom-in" src="./assets/zoom_in.svg" />
+                    <img id="zoom-out" src="./assets/zoom_out.svg" />
+                </div>
+
+            </div>
+
+            <div id="map"></div>
         </div>
         <div class="list" hidden>
             <h1>Room lists</h1>
