Added friends bar

--- a/windows/lobby/lobby.html
+++ b/windows/lobby/lobby.html
@@ -75,6 +75,8 @@
             </section>
             <footer>
                 <h3>Quick Actions</h3>
+                <img id="schedule" src="assets/img/schedule.svg" />
+                <img id="map" src="assets/img/map.svg" />
             </footer>
         </div>
     </div>
