--- a/windows/room/room.html
+++ b/windows/room/room.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="../../css/main.css" />
     <link rel="stylesheet" href="css/room.css" />
     <link rel='stylesheet' href="../../widgets/conversation/css/conversation.css" />
+    <link rel='stylesheet' href="../../widgets/hover_view/css/user_hover.css" />
 </head>
 <body>
     <div class="head">
@@ -61,6 +62,9 @@
         
     </div>
 
+    <div id="user-hover-view" hidden class="compact"></div>
+
+
     <script src="../../js/window-control.js"></script>
     <script src="../../js/CanvasController.js"></script>
     <script src='js/notifications.js'></script>
@@ -71,6 +75,7 @@
 
     <script src="../../widgets/conversation/js/canvas.js"></script>
     <script src="../../widgets/conversation/js/conversation.js"></script>
+    <script src="../../widgets/hover_view/js/user_hover.js"></script>
 
 </body>
 </html>
