--- a/windows/roomMap/roomMap.html
+++ b/windows/roomMap/roomMap.html
@@ -21,6 +21,14 @@
         </div>
     </div>
     <div class="view">
+        <div id="profile-preview">
+            <div class="bubble">
+                <div class="round">
+                    <img src="" alt="" >
+                </div>
+            </div>
+            <h2></h2>
+        </div>
         <div class="recommended">
             <div class="default">
                 <img class="buildingimg" src="./assets/building_icon.svg" />
