--- a/widgets/friends_bar/friends_bar.html
+++ b/widgets/friends_bar/friends_bar.html
@@ -5,9 +5,16 @@
 </div>
 
 <div id="friends-bar">
-    <img id="close-btn" src="../../assets/img/friends_bar/right_pointer.svg" />
-    <h1>Connections</h1>
-    <img id="friends-icon" src="../../assets/img/friends_bar/people.svg" />
+
+    <div class="header">
+        <img id="close-btn" src="../../assets/img/friends_bar/right_pointer.svg" />
+        <div>
+            <h1>Connections</h1>
+            <img id="friends-icon" src="../../assets/img/friends_bar/people.svg" />
+        </div>
+        
+    </div>
+    
     <div class="search">
         <img src="../../assets/img/friends_bar/search_green.svg" />
         <input type="search" name="connections" placeholder="Find people on campus" />
