--- a/windows/login/login.html
+++ b/windows/login/login.html
@@ -11,9 +11,9 @@
     <div class="head">
         <img class="logo" src="../../assets/img/logo.svg" />
         <div class="window-control">
-            <button id="min-window"><img src="../../assets/img/minimize.png" /></button>
-            <button id="max-window"><img src="../../assets/img/maximize.png" /></button>
-            <button id="close-window"><img src="../../assets/img/close.png" /></button>
+            <button id="min-window"><img src="../../assets/img/minimize.svg" /></button>
+            <button id="max-window"><img src="../../assets/img/maximize.svg" /></button>
+            <button id="close-window"><img src="../../assets/img/close.svg" /></button>
         </div>
     </div>
     <div class="view">
