--- a/windows/room/room.html
+++ b/windows/room/room.html
@@ -11,12 +11,20 @@
     <link rel="stylesheet" href="../../widgets/friends_bar/css/friends-bar.css" />
 </head>
 <body>
-    <div class="head">
+    <div class="head dark">
         <img class="logo" src="../../assets/img/logo-dark.svg" />
         <div class="window-control">
+            <div id="profile-preview">
+                <div class="bubble">
+                    <div class="round">
+                        <img src="" alt="" >
+                    </div>
+                </div>
+                <h2></h2>
+            </div>
             <button id="min-window"><img src="../../assets/img/minimize-dark.svg" /></button>
             <button id="max-window"><img src="../../assets/img/maximize-dark.svg" /></button>
-            <button id="close-window"><img src="../../assets/img/close-dark.svg" /></button>
+            <button id="close-window"><img src="../../assets/img/close-dark.svg" /><img class="hoverimage" src="../../assets/img/close.svg" /></button>
         </div>
     </div>
     <div class="view">
