--- a/windows/signup/signup.html
+++ b/windows/signup/signup.html
@@ -17,7 +17,7 @@
         <div class="window-control">
             <button id="min-window"><img src="../../assets/img/minimize-dark.svg" /></button>
             <button id="max-window"><img src="../../assets/img/maximize-dark.svg" /></button>
-            <button id="close-window"><img src="../../assets/img/close-dark.svg" /></button>
+            <button id="close-window"><img src="../../assets/img/close-dark.svg" /><img class='hoverimage'src="../../assets/img/close-dark.svg" /></button>
         </div>
     </div>
     <div class="view">
