Removed redundant ipc communication functions

--- a/windows/roomMap/roomMap.html
+++ b/windows/roomMap/roomMap.html
@@ -31,7 +31,7 @@
     </div>
     <div class="view">
         
-        <div class="recommended">
+        <div class="topbar">
             <div class="default">
                 <img class="buildingimg" src="./assets/building_icon.svg" />
                 <h1>ROOM MAP</h1>
