--- a/widgets/hover_view/user_hover.html
+++ b/widgets/hover_view/user_hover.html
@@ -35,7 +35,7 @@
                     <h2>Mutual Friends</h2>
                 </div>
                 <div class="section-row">
-                    <div class="bubbles">
+                    <div class="bubbles black-scrollbar">
                         
                         
                         <button class="bubble round">
