--- a/windows/settings/settings.html
+++ b/windows/settings/settings.html
@@ -70,6 +70,38 @@
                 <button>SUBMIT</button>
             </div>
 
+            <div class='overlay hidden'>
+
+            
+            <div id='course-view'>
+                
+                <h1>EECE 334</h1>
+                <div>
+                    <h2>
+                        Info
+                    </h2>
+                    <div>
+                        <table class='time'><tr>
+                            <td class='s1'></td>
+                            <td class='s2'></td>
+                            <td></td>
+                            <td class='s3'></td>
+                            <td class="s4"></td>
+                        </tr></table>
+                    </div>
+                    <h2>
+                        Online meeting link
+                    </h2>
+                    <div>
+                        <input type="url" id='meeting-link' placeholder="enter meeting link here...">
+                        <button id='btn-update-meeting-link'>Update</button>
+                    </div>
+
+                </div>
+            </div>
+
+            </div>
+
             <div id="schedule-view">
                 <div class="days">
                     <h3>Monday</h3>
