added-custom-server

--- a/windows/settings/settings.html
+++ b/windows/settings/settings.html
@@ -228,6 +228,15 @@
                 
             </div>
         </div>
+        <div class="tab" id="user-tab">
+
+        </div>
+        <div class="tab" id="privacy-tab">
+
+        </div>
+        <div class="tab" id="groups-tab">
+            
+        </div>
     </main>
     </div>
 
