--- a/windows/login/login.html
+++ b/windows/login/login.html
@@ -23,6 +23,8 @@
                 <p>VIRTUAL CAMPUS</p>
             </div>
             <div class="login">
+                <label>Test server</label>
+                <input type="text" name="dev-server" id="dev-server">
                 <button class="ms-login">
                     <img src="../../assets/img/ms-logo.png" width="20px" />
                     Enter With Your University Email
