Slight edit to major page in signup

--- a/windows/signup/signup.html
+++ b/windows/signup/signup.html
@@ -96,10 +96,10 @@
                 <form>
     
                     <div class="select-field" id="major">
-                        <label for="major">First Name</label>
+                        <label for="major">Major</label>
                         <select name="major" id="major">
-                            <option value="CCE" selected>Computer and Communication Engineering</option>
-                            <option value="ECE">Electrical and Communication Engineering</option>
+                            <option value="CCE" selected>Computer and Communications Engineering</option>
+                            <option value="ECE">Electrical and Computer Engineering</option>
                         </select>
                     </div>
     
